# carrot-app

./: .gitignore  Cargo.toml  Dockerfile  LIQUIDITY-POOLS.md  README.md  argo-template.yml  entrypoint.sh  justfile  metadata.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-and-push-docker-image.yml  check.yml  gh-pages  gh-pages.yml  scheduled.yml  test.yml
artifacts/: app-aarch64.wasm  app.wasm  carrot_app.wasm  checksums.txt  checksums_intermediate.txt  cl_vault.wasm  savings_app.wasm
bot/: Cargo.toml  README.md
bot/deployment/: deployment.yaml  ingress.yaml  service.yaml
bot/src/: bot.rs  bot_args.rs  lib.rs  metrics.rs
contracts/carrot-app/: Cargo.toml
contracts/carrot-app/examples/: deploy.rs  gas-usage.md  install_savings_app.rs  localnet_deploy.rs  localnet_install.rs  localnet_test.rs  migrate.rs  redeploy.rs  schema.rs
contracts/carrot-app/src/: ans_assets.rs  autocompound.rs  check.rs  contract.rs  error.rs  exchange_rate.rs  helpers.rs  lib.rs  msg.rs  state.rs  yield_sources.rs
contracts/carrot-app/src/distribution/: deposit.rs  mod.rs  query.rs  rebalance.rs  rewards.rs  withdraw.rs
contracts/carrot-app/src/handlers/: execute.rs  instantiate.rs  internal.rs  migrate.rs  mod.rs  preview.rs  query.rs  swap_helpers.rs
contracts/carrot-app/src/replies/: add_to_position.rs  after_swaps.rs  create_position.rs  mod.rs  withdraw_to_asset.rs
contracts/carrot-app/src/replies/osmosis/: add_to_position.rs  create_position.rs  mod.rs
contracts/carrot-app/src/yield_sources/: mars.rs  mod.rs  osmosis_cl_pool.rs  yield_type.rs
contracts/carrot-app/tests/: autocompound.rs  common.rs  config.rs  deposit_withdraw.rs  grants.rs  interface.rs  pool_inbalance.rs  query.rs  recreate_position.rs  strategy.rs  wasm.rs
contracts/savings-app/: Cargo.toml
contracts/savings-app-quasar/: Cargo.toml
contracts/savings-app-quasar/artifacts/: checksums.txt  checksums_intermediate.txt
contracts/savings-app-quasar/src/: contract.rs  msg.rs  state.rs
contracts/savings-app-quasar/src/handlers/: execute.rs  instantiate.rs  query.rs
contracts/savings-app-quasar/tests/: integration.rs  interface.rs
contracts/savings-app/examples/: deploy.rs  schema.rs
contracts/savings-app/src/: cl_vault.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/savings-app/src/handlers/: execute.rs  instantiate.rs  migrate.rs  query.rs  swap_helpers.rs
contracts/savings-app/src/replies/: add_to_position.rs  create_position.rs  deposit.rs  mod.rs  proxy_rewards.rs
contracts/savings-app/tests/: edge_cases.rs  grants.rs  interface.rs  wasm.rs
docs/: book.toml
docs/src/: 0_introduction.md  1_how_it_works.md  2_tutorial.md  SUMMARY.md
prometheus/: Dockerfile  prom.yml  prometheus.yml  railway.toml
savings-bot/: Cargo.toml
savings-bot/src/: main.rs
schema/: execute_msg.json  instantiate_msg.json  module-schema.json  query_msg.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_available_rewards.json  response_to_balance.json  response_to_compound_status.json  response_to_config.json  response_to_position.json
src/: error.rs  msg.rs
src/handlers/: execute.rs
src/replies/: deposit.rs  mod.rs
