[workspace]
members = ["contracts/*", "bot"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cw-orch = "0.26.0"
abstract-app = { version = "0.24.1-beta.2" }
abstract-adapter = { version = "0.24.1-beta.2" }
abstract-interface = { version = "0.24.1-beta.2" }
abstract-dex-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-osmosis-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-client = { version = "0.24.1-beta.2" }
cw-asset = { version = "4.0" }
cw-orch-osmosis-test-tube = { version = "0.4.0" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[patch.crates-io]
abstract-app = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-interface = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-client = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-dex-standard = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-std = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-sdk = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
abstract-adapter-utils = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
# abstract-osmosis-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }
# abstract-dex-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "buckram/update-osmosis-test-with-modified-wasm" }     # Replace to tag tag = "v0.23.0-dex-adapter" }

cw-orch-osmosis-test-tube = { git = "https://github.com/AbstractSDK/cw-orchestrator.git", branch = "buckram/revive-osmosis-test-tube" }
cw-orch-core = { git = "https://github.com/AbstractSDK/cw-orchestrator.git", branch = "buckram/revive-osmosis-test-tube" }
cw-orch-traits = { git = "https://github.com/AbstractSDK/cw-orchestrator.git", branch = "buckram/revive-osmosis-test-tube" }
