[workspace]
members = ["contracts/*", "bot"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cw-orch = "0.24.0"
abstract-app = { version = "0.23.0" }
abstract-interface = { version = "0.24.1" }
abstract-dex-adapter = { git = "https://github.com/abstractsdk/abstract.git", tag = "v0.23.0-dex-adapter" }
abstract-client = { version = "0.23.0" }
cw-asset = { version = "3.0" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
