[workspace]
members = ["contracts/*", "bot"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cw-orch = { version = "0.27.0" }
abstract-app = { version = "0.24.1" }
abstract-adapter = { version = "0.24.1" }
abstract-interface = { version = "0.24.1" }
abstract-dex-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "main", default-features = false }
abstract-osmosis-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "main" }
abstract-client = { version = "0.24.1" }
cw-asset = { version = "4.0" }
cw-orch-osmosis-test-tube = { version = "0.4.0" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[patch.crates-io]
abstract-app = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
abstract-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
abstract-interface = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
abstract-client = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
abstract-dex-standard = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
abstract-std = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
abstract-sdk = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
abstract-adapter-utils = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
# abstract-osmosis-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" }
# abstract-dex-adapter = { git = "https://github.com/abstractsdk/abstract.git", branch = "artifacts/0.24.x" } # Replace to tag tag = "v0.25.0" }
