[package]
name = "savings-bot"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "local"
path = "src/bin/local.rs"

[dependencies]
cw-orch = { workspace = true, features = ["daemon"] }
abstract-app = { workspace = true }
abstract-client = { workspace = true }
osmosis-std = { version = "0.21.0" }
cosmos-sdk-proto = { version = "0.20.0" }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
tonic = "0.10.0"
carrot-app = { path = "../contracts/carrot-app", features = ["interface"] }
clap = { version = "4", features = ["derive"] }
humantime = "2.1.0"
prometheus = "0.13.2"
tokio = "1.26.0"
warp = "0.3.6"

