[package]
name = "carrot-app"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
# enable node-backed tests (ensure Docker is running)
# run with `cargo test --jobs 1 --features node-tests`
node-tests = ["interface"]
interface = [
  "export",
  "dep:cw-orch",
  "abstract-app/interface-macro",
  "abstract-dex-adapter/interface",
]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { version = "1.2" }
cosmwasm-schema = { version = "1.2" }
cw-controllers = { version = "1.0.1" }
cw-storage-plus = "1.2.0"
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { version = "3.0" }

abstract-app = { workspace = true }
abstract-sdk = {version = "0.21.0", features = [
  "stargate",
] }
# Dependencies for interface
abstract-dex-adapter = { workspace = true, features = ["osmosis"] }
cw-orch = { workspace = true, optional = true }

osmosis-std = { version = "0.21.0" }
prost = { version = "0.12.3" }

[dev-dependencies]
abstract-interface = { workspace = true, features = ["daemon"] }

prost = { version = "0.12.3" }
prost-types = { version = "0.12.3" }
log = { version = "0.4.20" }
carrot-app = { path = ".", features = ["interface"] }
abstract-testing = { version = "0.21.0" }
abstract-client = { version = "0.21.0" }
abstract-sdk = { version = "0.21.0", features = [
  "test-utils",
] }
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { workspace = true, features = ["osmosis-test-tube"] }
clap = { version = "4.3.7", features = ["derive"] }
