[package]
name = "carrot-app"
version = "0.5.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
# enable node-backed tests (ensure Docker is running)
# run with `cargo test --jobs 1 --features node-tests`
node-tests = ["interface"]
interface = ["export", "dep:cw-orch"]
schema = ["abstract-app/schema"]

[dependencies]
cw-utils = { version = "2.0.0" }
cosmwasm-std = { version = "2.0" }
cosmwasm-schema = { version = "2.0" }
cw-controllers = { version = "2.0.0" }
cw-storage-plus = { version = "2.0.0" }
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { workspace = true }

abstract-app = { workspace = true, features = ["stargate"] }
# Dependencies for interface
abstract-dex-adapter = { workspace = true, features = ["osmosis"] }
cw-orch = { workspace = true, optional = true }

osmosis-std = { version = "0.26.0" }
prost = { version = "0.13.1" }

[dev-dependencies]
abstract-interface = { workspace = true, features = ["daemon"] }
bip32 = "0.5.2"

prost-types = { version = "0.13.1" }
log = { version = "0.4.20" }
carrot-app = { path = ".", features = ["interface"] }
abstract-client = { workspace = true }
abstract-app = { workspace = true, features = ["test-utils", "stargate"] }
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { workspace = true }
cw-orch-osmosis-test-tube = { workspace = true }
clap = { version = "4.3.7", features = ["derive"] }
