[package]
name = "app"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
# enable node-backed tests (ensure Docker is running)
# run with `cargo test --jobs 1 --features node-tests`
node-tests = ["interface"]
interface = [
  "export",
  "dep:abstract-interface",
  "dep:cw-orch",
  "abstract-app/interface-macro",
  "abstract-dex-adapter/interface",
]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { version = "1.2" }
cosmwasm-schema = { version = "1.2" }
cw-controllers = { version = "1.0.1" }
cw-storage-plus = "1.1.0"
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { version = "3.0" }

abstract-core = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch" }
abstract-app = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch" }
abstract-sdk = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch" }

# Dependencies for interface
abstract-dex-adapter = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch", features = [
  "osmosis",
] }

abstract-interface = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch", optional = true }
# cw-orch = { version = "0.19.1", optional = true }
cw-orch = { git = "https://github.com/abstractsdk/cw-orchestrator", optional = true, branch = "feature/add-authz-wrapping" }
cl-vault = { git = "https://github.com/abstractsdk/quasar", features = [
  "library",
] }
# cl-vault = { path = "../../../quasar/smart-contracts/contracts/cl-vault", features = [
#   "library",
# ] }

cw-vault-multi-standard = { git = "https://github.com/quasar-finance/cw-vault-standard", features = [
  "lockup",
  "force-unlock",
] }


[dev-dependencies]
osmosis-std = { version = "0.22.0" }
abstract-interface = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch", features = [

  "daemon",
] }

prost = { version = "0.12.3" }
prost-types = { version = "0.12.3" }
log = { version = "0.4.20" }
app = { path = ".", features = ["interface"] }
abstract-testing = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch" }
abstract-client = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch" }
abstract-sdk = { git = "https://github.com/abstractsdk/abstract", branch = "cw-orch-authz/patch", features = [
  "test-utils",
] }
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { git = "https://github.com/abstractsdk/cw-orchestrator", features = [
  "osmosis-test-tube",
], branch = "feature/add-authz-wrapping" }
clap = { version = "4.3.7", features = ["derive"] }
